# strava-visibility-tracker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ci.yml  execution.yml
.github/workflows/: ci.yml  execution.yml
docs/: acceptance-tests.md  ai-transparency.md  design-process.md  functional-spec.md  technical-choices.md
src/: config.py  get_refresh_token.py  main.py  report.py  strava.py
tests/: test_config.py  test_main.py  test_report.py  test_strava.py
